--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "credit-card-luhn-validation",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "test": "jest --detectOpenHandles",
-    "devstart": "nodemon --watch",
-    "start": "node app.js"
+    "devstart-backend": "nodemon backend/server.js",
+    "start-backend": "node backend/server.js",
+    "start-frontend": "cd frontend && npm start",
+    "dev": "concurrently \"npm run start-backend\" \"npm run start-frontend\""
   },
   "keywords": [],
   "author": "",
@@ -19,5 +21,8 @@
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.1"
   }
 }
