--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,11 @@
     "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
   },
+  "jest": {
+    "moduleNameMapper": {
+      "axios": "axios/dist/node/axios.cjs"
+    }
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
