--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jest": "^29.7.0",
+    "mongoose": "^7.6.3",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
   },
